Forced modal input to type number - fixed modal location, reversing direction if too close to the edge - corrected *10 input on health gain each level

--- a/client/src/components/Modal/styles.css
+++ b/client/src/components/Modal/styles.css
@@ -1,11 +1,11 @@
 .modal{
-  position:fixed;
+  position:absolute;
   top:0px;
   left:0px;
   background:rgba(204,204,204,.4);
   z-index:255;
-  width:100vw;
-  height:100vh;
+  width:100%;
+  height:100%;
 }
 
 .closeButton{
